--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,14 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
+  freezed: ^2.3.2
+  freezed_annotation: ^2.2.0
   get_it: ^7.2.0
   google_fonts: null
+  http: ^0.13.5
   injectable: ^1.5.3
   json_annotation: ^4.8.0
   json_serializable: ^6.6.1
-
 dev_dependencies:
   build_runner: ^2.3.3
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -52,7 +54,6 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  freezed: ^2.3.2
   injectable_generator: ^1.5.3
 
 # For information on the generic Dart part of this file, see the
