--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,27 +30,26 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bordered_text: ^2.0.0
+  build_runner: ^2.3.3
+  cached_network_image: ^3.2.3
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
-  dio: ^5.1.1
+  dio: null
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.2
+  flutter_bloc: ^8.1.1
   freezed: ^2.3.2
   freezed_annotation: ^2.2.0
   get_it: ^7.2.0
-  google_fonts: null
-  http: ^0.13.5
+  google_fonts: ^3.0.1
   injectable: ^1.5.3
-  json_annotation: ^4.8.0
-  json_serializable: ^6.6.1
+  intl: ^0.18.0
+  json_annotation: ^4.7.0
+  json_serializable: ^6.5.4
+  share_plus: ^4.0.3
+  video_player: ^2.3.0
+
 dev_dependencies:
-  build_runner: ^2.3.3
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
@@ -66,9 +65,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - lib/assets/john-wick-chapter-4-1920x1080-poster-keanu-reeves-4k-24447.jpg
+    - lib/assets/netflix-logo-png-2574.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
